--- a/styles.scss
+++ b/styles.scss
@@ -49,13 +49,21 @@
     line-height: 21px;
 }
 
+// body{
+//     overflow-x: hidden;
+// }
+
 /*MOBILE*/
 .header__container {
     display: flex;
     justify-content: space-between;
     align-content: center;
-    margin-bottom: 48px;
-
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    width: 100%;
+    background-color: white;
     .logo {
         padding: 13px 0 0 10px;
 
@@ -88,11 +96,29 @@
     }
 
     .navegacion {
+        position: relative;
+        top: -50px;
+        right: 0;
+        width: 100%;
         display: none;
+        ul{
+            position: absolute;
+            top: 3rem;
+            right: 0;
+            list-style: none;
+            background-color: #333333;
+            opacity: 0.6;
+            color: white;
+            font-family: 'Poppins', sans-serif;
+            li{
+                padding: 15px 320px 15px 15px;
+            }
+        }
     }
 }
 
 .main__container {
+    margin-top: 96px;
     &--text {
         padding-left: 40px;
         padding-right: 63px;
